# src/swagger.json
@@ -1,52 +1,186 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "title": "User Book Reading Notes",
-      "description": "API para registro, login e listagem de usuários",
-      "version": "1.0.0"
-    },
-      "components":{
-        "securitySchemes":{
-          "BearerAuth":{
-            "type": "http",
-            "scheme": "bearer",
-            "bearerFormat": "JWT"
+  "openapi": "3.0.0",
+  "info": {
+    "title": "User Book Reading Notes",
+    "description": "API para registro, login e listagem de usuários",
+    "version": "1.0.0"
+  },
+  "components": {
+    "securitySchemes": {
+      "BearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
+  "paths": {
+    "/api/book/register": {
+      "post": {
+        "tags": ["Books"],
+        "summary": "Criar dados de um livro",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "category",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "author",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
           }
-        }      
-    },
-    "paths": {
-        "/api/book/register": {
-        "post": {
-          "tags": ["Books"],
-          "summary": "Registrar um novo Livro",
-            "requestBody": {
-              "required": true,
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "name": {
-                        "type": "string"
-                      },
-                      "category": {
-                        "type": "string"
-                      },
-                      "author":{
-                        "type": "string"
-                      }
+        ],
+        "responses": {
+          "200": {
+            "description": "Livro registrado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer"
                     },
-                    "required": ["name", "category", "author"]
+                    "name": {
+                      "type": "string"
+                    },
+                    "category": {
+                      "type": "string"
+                    },
+                    "author": {
+                      "type": "string"
+                    }
                   }
                 }
               }
-            },
-          "responses": {
-            "200": {
-              "description": "Livro registrado com sucesso",
-              "content": {
-                "application/json": {
-                  "schema": {
+            }
+          },
+          "400": {
+            "description": "Erro ao registrar o livro"
+          }
+        }
+      }
+    },
+    "/api/book/delete/{id}": {
+      "delete": {
+        "tags": ["Books"],
+        "summary": "Deletar livro",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Livro deletado com sucesso"
+          },
+          "400": {
+            "description": "Erro ao deletar o livro"
+          }
+        }
+      }
+    },
+    "/api/book/update/{id}": {
+      "put": {
+        "tags": ["Books"],
+        "summary": "Atualizar dados de um livro",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "category",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "author",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Livro atualizado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "integer"
+                    },
+                    "name": {
+                      "type": "string"
+                    },
+                    "category": {
+                      "type": "string"
+                    },
+                    "author": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro ao atualizar o livro"
+          }
+        }
+      }
+    },
+    "/api/book/list": {
+      "get": {
+        "tags": ["Books"],
+        "summary": "Obter a lista de livros",
+        "responses": {
+          "200": {
+            "description": "Lista de livros",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
                     "type": "object",
                     "properties": {
                       "id": {
@@ -58,114 +192,132 @@
                       "category": {
                         "type": "string"
                       },
-                      "author":{
+                      "author": {
                         "type": "string"
                       }
                     }
                   }
                 }
               }
-            },
-            "400": {
-              "description": "Erro ao registrar o Livro"
             }
+          },
+          "400": {
+            "description": "Erro ao obter a lista de livros"
           }
         }
-      },
-      "/api/book/delete/{id}": {
-        "delete": {
-          "tags": ["Books"],
-          "summary": "Deletar livro",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "required": true,
+      }
+    },
+    "/api/user/register": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Registrar um novo usuário",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
               "schema": {
-                "type": "integer"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Livro deletado com sucesso"
-            },
-            "400": {
-              "description": "Erro ao deletar o livro"
-            }
-          }
-        }
-      },
-      
-      "/api/book/book": {
-        "get": {
-          "tags": ["Books"],
-          "summary": "Obter a lista de Livros",          
-          "responses": {
-            "200": {
-              "description": "Lista de livros",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "properties": {
-                        "id": {
-                          "type": "string",
-                          "format": "uuid"
-                        },
-                        "name": {
-                          "type": "string"
-                        },
-                        "category": {
-                          "type": "string"
-                        },
-                        "author":{
-                          "type": "string"
-                        }
-                      }
-                    }
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
                   }
-                }
+                },
+                "required": ["username", "password"]
               }
-            },
-            "400": {
-              "description": "Erro ao obter a lista de livros"
             }
           }
-        }
-      } ,      
-      
-      "/api/user/register": {
-        "post": {
-          "tags": ["Users"],
-          "summary": "Registrar um novo usuário",
-          "requestBody": {
-            "required": true,
+        },
+        "responses": {
+          "200": {
+            "description": "Usuário registrado com sucesso",
             "content": {
               "application/json": {
                 "schema": {
                   "type": "object",
                   "properties": {
+                    "id": {
+                      "type": "string",
+                      "format": "uuid"
+                    },
                     "username": {
                       "type": "string"
-                    },
-                    "password": {
-                      "type": "string"
                     }
-                  },
-                  "required": ["username", "password"]
+                  }
                 }
               }
             }
           },
-          "responses": {
-            "200": {
-              "description": "Usuário registrado com sucesso",
-              "content": {
-                "application/json": {
-                  "schema": {
+          "400": {
+            "description": "Erro ao registrar o usuário"
+          }
+        }
+      }
+    },
+    "/api/user/login": {
+      "post": {
+        "tags": ["Users"],
+        "summary": "Login de usuário",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "type": "string"
+                  },
+                  "password": {
+                    "type": "string"
+                  }
+                },
+                "required": ["username", "password"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Login realizado com sucesso",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "token": {
+                      "type": "string"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Erro ao realizar login"
+          }
+        }
+      }
+    },
+    "/api/user/user": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Obter a lista de usuários",
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Lista de usuários",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
                     "type": "object",
                     "properties": {
                       "id": {
@@ -179,100 +331,13 @@
                   }
                 }
               }
-            },
-            "400": {
-              "description": "Erro ao registrar o usuário"
-            }
-          }
-        }
-      },
-
-
-      "/api/user/login": {
-        "post": {
-          "tags": ["Users"],
-          "summary": "Login de usuário",
-          "requestBody": {
-            "required": true,
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "username": {
-                      "type": "string"
-                    },
-                    "password": {
-                      "type": "string"
-                    }
-                  },
-                  "required": ["username", "password"]
-                }
-              }
             }
           },
-          "responses": {
-            "200": {
-              "description": "Login realizado com sucesso",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "object",
-                    "properties": {
-                      "token": {
-                        "type": "string"
-                      }
-                    }
-                  }
-                }
-              }
-            },
-            "400": {
-              "description": "Erro ao realizar login"
-            }
+          "400": {
+            "description": "Erro ao obter a lista de usuários"
           }
         }
-      },
-      
-
-      "/api/user/user": {
-        "get": {
-          "tags": ["Users"],
-          "summary": "Obter a lista de usuários",
-          "security":[
-            {
-              "BearerAuth":[]
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Lista de usuários",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "array",
-                    "items": {
-                      "type": "object",
-                      "properties": {
-                        "id": {
-                          "type": "string",
-                          "format": "uuid"
-                        },
-                        "username": {
-                          "type": "string"
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            },
-            "400": {
-              "description": "Erro ao obter a lista de usuários"
-            }
-          }
-        }
-      }   
+      }
     }
   }
-  
+}
